# ros-noetic

ros-noetic-pkgs/: README.md
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/: Pickit_Program.ipynb
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/.ipynb_checkpoints/: Pickit_Program-checkpoint.ipynb
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/calibrator/: rotation_utils.py
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/indy_utils/: indydcp_client.py
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/teaching/: teach_config.json  tool_config.json
ros-noetic-pkgs/Neuromeka_Pickit_Celform/celform/vision_clients/: pickit_client.py
ros-noetic-pkgs/RH-P12-RN/: .rosinstall
ros-noetic-pkgs/RH-P12-RN/RH-P12-RN_Example/linux64/: rh-p12-rn_example  rh-p12-rna_example
ros-noetic-pkgs/RH-P12-RN/rh_p12_rn_manager/src/: rh_p12_rn_manager.cpp
ros-noetic-pkgs/combined_tf/: CMakeLists.txt  package.xml
ros-noetic-pkgs/combined_tf/launch/: rb_tf_tree.launch
ros-noetic-pkgs/combined_tf/src/: indy_tf_manager.py  object_listerner.py  object_publisher.py  rb_tf_manager.py  robot_pose_pub.py  test_UI.py  tf_manager.py  tf_manager_ui.ui
ros-noetic-pkgs/controll_robots/: CMakeLists.txt  mainpage.dox  package.xml
ros-noetic-pkgs/controll_robots/launch/: cmd_rb10.launch  co_connector.launch  indy_controller.launch  prepick_pose_test.launch  prepick_pose_test.rviz  rb_controller.launch  rb_controller_test.launch  robot_co_controller.launch  robot_controller.launch  robot_controller_indy7.launch  robot_controller_rb10.launch
ros-noetic-pkgs/controll_robots/msg/: robots_info.msg
ros-noetic-pkgs/controll_robots/scripts/controller/: Controller_cmd.py  JointController_indy7.py  JointController_rb10.py  TaskController_indy7.py  TaskController_rb10.py  control_robot.py  controller_ui.py  jobdivider.py  robot.py  test_UI.py  test_UI_demo.ui  test_frame_operation.py  waypoint_broadcaster.py
ros-noetic-pkgs/controll_robots/scripts/pickit_examples/: calibration-example.py
ros-noetic-pkgs/controll_robots/scripts/txt_data/: chain_rb_tf_data.txt  indy7_tf_info.txt  rb10_tf_info.txt  rb_rb_data.txt  rb_test.txt  teaching_points(indy7).txt  tf_information.txt
ros-noetic-pkgs/controll_robots/src/: qnode.cpp  qnode.hpp
ros-noetic-pkgs/controll_robots/test_ui/: test_UI3.ui  test_UI4.ui  test_ui1.ui  test_ui2.ui
ros-noetic-pkgs/im_pickit_msgs/: CMakeLists.txt  package.xml
ros-noetic-pkgs/im_pickit_msgs/action/: GetReferenceFrame.action
ros-noetic-pkgs/im_pickit_msgs/include/im_pickit_msgs/: common.h
ros-noetic-pkgs/im_pickit_msgs/include/im_pickit_msgs/plugin/: ColorRangeRGB.h
ros-noetic-pkgs/im_pickit_msgs/msg/: BlacklistedPick.msg  BlacklistedPickArray.msg  BoundingBox.msg  CalibrationStatus.msg  CalibrationValidationResult.msg  ColorRangeRGB.msg  File.msg  FolderContent.msg  Model.msg  ModelClouds.msg  ModelsClouds.msg  ModelsData.msg  MonitoringEvent.msg  Object.msg  ObjectArray.msg  ObjectPickFrame.msg  ObjectPickFrameOffsetSources.msg  ObjectPickFrameSymmetry.msg  ObjectPickFrames.msg  PointCloud2Array.msg  PointIndices.msg  Reliability.msg  ReliabilityValue.msg  SnapshotStatus.msg  StatusError.msg  StatusInvalid.msg  StatusUnpickable.msg  SubModel.msg  SubfolderContent.msg  TeachXDModelsData.msg  ToolModels.msg
ros-noetic-pkgs/im_pickit_msgs/scripts/: pick_and_place_example.py
ros-noetic-pkgs/im_pickit_msgs/srv/: AddBlacklistedPick.srv  AddMeshTool.srv  AddShapeModel.srv  AddSubModel.srv  BackupConfigurations.srv  CalculateCalibration.srv  CaptureImage.srv  CheckForObjects.srv  ConfigureCalibration.srv  ConstructTeachXdModel.srv  CopyConfiguration.srv  CreateConfiguration.srv  DetectTeachXdBoxMasks.srv  EditConfigurationFiles.srv  IntArg.srv  LoadConfig.srv  LoadSnapshot.srv  ModelData.srv  ModelXdData.srv  ProcessImage.srv  RemoveSubModel.srv  RestoreConfigurations.srv  SaveActiveConfiguration.srv  SaveCameraSettings.srv  SaveConfiguration.srv  SaveSnapshot.srv  SetMarkersMode.srv  SetModelData.srv  SetShapePickFrames.srv  SetToolModels.srv  SetTransform.srv  StrArg.srv  TeachFromCad.srv  TeachFromCamera.srv  TeachFromDXF.srv  TeachRoi.srv  ValidateCalibration.srv
ros-noetic-pkgs/kdl_chain/: CMakeLists.txt  package.xml
ros-noetic-pkgs/kdl_chain/launch/: kdl_chain.launch
ros-noetic-pkgs/kdl_chain/msg/: JointArray.msg
ros-noetic-pkgs/kdl_chain/src/: link_publisher.py  robot_controller.py  robot_model.py  test_ui.py  tf_publisher.py  ui_controller.py
ros-noetic-pkgs/kdl_chain/ui/: controller.ui
ros-noetic-pkgs/qt_robot/: CMakeLists.txt  mainpage.dox  package.xml
ros-noetic-pkgs/qt_robot/msg/: rb_data.msg
ros-noetic-pkgs/qt_robot/src/: qnode.cpp  qnode.hpp
ros-noetic-pkgs/rainbow/rb10_moveit_config/: CMakeLists.txt  package.xml
ros-noetic-pkgs/rainbow/rb3_moveit_config/: CMakeLists.txt
ros-noetic-pkgs/rainbow/rb5_moveit_config/: CMakeLists.txt
ros-noetic-pkgs/rainbow/rb_connector/: CMakeLists.txt
ros-noetic-pkgs/rainbow/rb_connector/launch/: rb_connector.launch  rb_connector_lunch.launch  rb_connector_origin.launch
ros-noetic-pkgs/rainbow/rb_connector/src/: rb.cpp  rb_connector.cpp
ros-noetic-pkgs/rainbow/rb_description/: CMakeLists.txt
ros-noetic-pkgs/rainbow/rb_test_ui/: CMakeLists.txt  package.xml
ros-noetic-pkgs/rb_tf_manager/: CMakeLists.txt  package.xml
ros-noetic-pkgs/rb_tf_manager/launch/: my_rb_lunch.launch  traj_lunch.launch  traj_lunch_real.launch  traj_lunch_real2.launch
ros-noetic-pkgs/rb_tf_manager/src/: link_publisher.py  object_publisher.py  one_point_test.py  tf_broadcaster_real.py  traj_broadcaster.py  traj_publisher.py  traj_publisher_real.py  traj_publisher_real2.py
ros-noetic-pkgs/tf_manager/: CMakeLists.txt  package.xml
ros-noetic-pkgs/tf_manager/launch/: combine_rb_indy.launch  my_indy7_lunch.launch  my_nrmk_lunch.launch  my_object_lunch.launch
ros-noetic-pkgs/tf_manager/src/: camera_rel_robot_broadcaster.py  camera_rel_robot_publisher.py  link_publisher.py  new_world_publisher.py  object_publisher.py  point_publisher.py  tf_broadcaster.py  tf_broadcaster_real.py  tf_manager.py
(+21 files in other folders)
