<package format="2">
  <name>im_pickit_msgs</name>
  <version>3.1.0</version>
  <description>Pickit ROS message and service definitions.</description>

  <maintainer email="info@pickit3d.com">Pick-it NV</maintainer>
  <license>Closed</license>

  <url type="website">https://www.pickit3d.com/</url>
  <url type="documentation">https://docs.pickit3d.com/ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
</package>
